Java 21에서 17로 내린다
사용자 결정이다. Spring Boot 3.5.16 은 17 을 지원하므로 프레임워크 쪽 제약은 없다.

오류는 18곳이었지만 원인은 하나다
- List.getFirst() / getLast(). Java 21 의 SequencedCollection(JEP 431)으로 들어온
  메서드라 17 에는 없다. main 3곳, 테스트 15곳.
- get(0) / get(size()-1) 로 바꿨다. "Java 17 이라 이렇게 쓴다" 같은 주석은 달지
  않았다 — 버전은 빌드 파일에 적혀 있고, 이 관용구는 그 자체로 평범하다.
- javac --release 17 로 먼저 재현해 목록을 확정하고 고쳤다. 추측으로 훑지 않았다.

툴체인 한 줄이 재발 방지 장치다
- build.gradle 의 languageVersion 을 17 로 내렸다. 그러면 Gradle 이 JDK 17 의
  javac 로 컴파일하므로, 누가 나중에 getFirst() 를 다시 써도 빌드가 그 자리에서
  깨진다. lint 규칙이나 정적 분석을 따로 얹지 않은 이유다 — 이미 있는 장치를
  두 벌로 만드는 일이 된다.
- settings.gradle 의 foojay-resolver 가 JDK 17 을 자동으로 내려받으므로 장비에
  17 이 설치돼 있지 않아도 된다.
- sourceCompatibility/targetCompatibility/options.release 를 따로 두지 않았다.
  버전을 두 곳에 적으면 나중에 한쪽만 바뀐다.

GlobalExceptionHandler 는 예외 종류가 바뀌는 자리였다
- getLast() 는 빈 리스트에서 NoSuchElementException, get(size()-1) 은
  IndexOutOfBoundsException 을 던진다. 전역 예외 핸들러 안에서 예외가 나면 응답이
  500 으로 뭉개지므로 확인이 필요했다 — 바로 위 isEmpty() 삼항이 걸러 주므로
  안전하다. 방어 코드를 더하지 않았다.
- 인덱스 접근으로 바뀌면서 한 식에서 getPath() 를 세 번 부르게 돼 지역 변수로 뺐다.

21 을 전제하던 나머지
- .github/workflows/desktop-installer.yml: java-version 17. "앱을 컴파일한
  툴체인과 같은 메이저 버전을 쓴다"는 이유는 그대로 유효하다.
- packaging/desktop/jpackage/build-desktop.sh: 안내 문구. jpackage 는 JDK 14
  부터 있으므로 17 에도 있다.
- packaging/desktop/nsis/build-windows.sh: 번들 JRE 를 17 로. jpackage 는 자기가
  속한 JDK 의 런타임을 앱에 넣으므로, 17 로 컴파일하고 21 런타임을 번들하면
  어긋난다. 버전·파일명·SHA256 을 Adoptium 공식 .sha256.txt 와 대조해 확인했다
  (17.0.20.1+1, bc21a939…d352). latest/17 URL 이 실제로 그 파일로 리다이렉트되는
  것도 확인했다.
- "WiX 4/5 는 JDK 21 의 jpackage 가 쓰지 못한다"는 주석은 사실이 21 의 성질이
  아니라 jpackage 의 성질이라, 주어만 바로잡았다(내용은 그대로 유효하다).
- CLAUDE.md 의 Java 버전 표기. Flyway 의 V21·V18 같은 마이그레이션 번호는 Java 와
  무관해 건드리지 않았다.

고치지 않은 것
- 설계서/agile_design/results/Hybrid_PM_Step01_Analysis.md 의 "참고 환경: JDK 21".
  그 분석을 수행한 시점의 환경을 적은 이력 기록이라, 소급해 고치면 기록이 아니게
  된다.

검증
- ./gradlew clean build 통과. 테스트 260건, 실패·오류 0.
- 바이트코드를 직접 확인했다: ProgressService·GanttService·GlobalExceptionHandler
  모두 major version 61(